# evalkit

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/rag_chatbot/: app.py  dataset.jsonl  spec.yaml
src/eval_accelerator/: __init__.py  cli.py
src/evalkit/: __init__.py  app_under_test.py  cli.py  dataset.py  failure_modes.py  llm_client.py  report.py  runner.py  spec.py
src/evalkit/evaluators/: __init__.py  base.py  deterministic.py  llm_judge.py
src/evalkit/knobs/: __init__.py  prompt_optimizer.py
tests/: test_dataset.py  test_evaluators.py  test_runner_example.py
