[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-accelerator"
version = "0.0.1"
description = "A reusable eval harness that ships inside AI accelerators — grade an app, cluster its failures, and improve it by turning prompt/architecture/agent/model knobs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["llm", "evaluation", "evals", "rag", "agents", "llm-as-judge"]
dependencies = [
    "openai>=1.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
azure = ["azure-identity>=1.17"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
evalacc = "eval_accelerator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_accelerator"]
